@@ -38,6 +38,8 @@ void rpc_suite(void);
 
 void dns_suite(void);
 
+void util_suite(void);
+
 void regress_pthread(void);
 void regress_zlib(void);
 
